# FStringInterpolation

./: .gitignore  LICENSE  LICENSE.md  README.md  fstringinterpolation.py  pyproject.toml
.github/workflows/: pypi.yml
tests/: fstringinterpolation_test.py
