[project]
name = "FStringInterpolation"
version = "0.1"
description = "interpolation for python's `configparser` that does f-string substitution" 
authors = [
 { name = "IOhannes m zmölnig", email = "zmoelnig@iem.at"}
]
home-page = "https://github.com/umlaeute/FStringInterpolation"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
dynamic = [ "version" ]
dependencies = [ ]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Software Development :: Libraries :: Python Modules ",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
dynamic.version = { attr = "fstringinterpolation.__VERSION__" }

